# alice_operator

./: CMakeLists.txt  README.md  package.xml
config/: robot.cfg  robot_cfg.txt
include/alice_operator/: .RoboCupGameControlData.h.swp
launch/: alice_operator.launch
src/: .operator_main.cpp.swp  operator_main.cpp  operator_main.cpp_b
